--- a/assessment/about.html
+++ b/assessment/about.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="main.css">
-        <section class="navbar" id="topnav">
+        <section class="navbar">
+            <a id="logo" href="index.html"><img src="images/logo.png"></a></li>
             <ul id="navlink">
-             <li><a href="index.html">Home </a></li>
              <li><a class="active" href="about.html">About </a></li>
              <li><a href="services.html">Services </a></li>
              <li><a href="register.html">Register</a></li>
