--- a/assessment/index.html
+++ b/assessment/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="main.css">
-        <section class="navbar" id="topnav">
+        <section class="navbar">
+            <a id="logo" href="index.html"><img src="images/logo.png"></a></li>
             <ul id="navlink">
-             <li><a class="active" href="index.html">Home </a></li>
              <li><a href="about.html">About </a></li>
              <li><a href="services.html">Services </a></li>
              <li><a href="register.html">Register</a></li>
@@ -17,17 +17,23 @@
                 <img src="images/stars1.png"> <p>“Tutortastic paired my daughter with the best tutors, she</br>was able to achieve NCEA Level 3 with ease!”</p>
                 <img src="images/stars2.png"> <p>“Tutortastic is infinitely helpful and compensates for any inconvenience, they’re the service to go when you’re on a budget.”</p>
             </div>
-            <h1><span>Tutortastic</span></h1>
-            <img src="images/wmn_lptp1.png" alt="Woman with a laptop" class="rounded main">
-            <p>Tutortastic is a New Zealand-based online tutoring service for year 9-13 students living in NZ. Our tutors are patient, <br/> accomplished, and will work hand-in-hand with ākonga and their whānau in order to get them to achieve bigger and better <br/> things.</p>
+
+            <div>
+             <h1><span>Tutortastic</span></h1>
+             <img src="images/wmn_lptp1.png" alt="Woman with a laptop" class="rounded main">
+             <p>Tutortastic is a New Zealand-based online tutoring service for year 9-13 students living in NZ. Our tutors are patient, <br/> accomplished, and will work hand-in-hand with ākonga and their whānau in order to get them to achieve bigger and better <br/> things.</p>
+             </div>
 
             <div class="landing stats">
-             <ul>
-                <li><h2>8,670</h2> <p>Students tutored<br/>in Aotearoa</p></li>
-                <li><h2>100+</h2> <p>Different<br/>subjects</p></li>
-                <li><h2>1,276</h2> <p>Registered tutors all<br/>around the country</p></li>
-             </ul>
+             <table class="stats">
+                <tr>
+                 <th><img class="stattable" src="images/statstudents.png"> <h2>8,670</h2> <p>Students tutored<br/>in Aotearoa</p></th>
+                 <th><img class="stattable" src="images/statsubjects.png"> <h2>100+</h2> <p>Different<br/>subjects</p></th>
+                 <th><img class="stattable" src="images/stattutors.png"> <h2>1,276</h2> <p>Registered tutors all<br/>around the country</p></th>
+                </tr>
+             </table>
             </div>
+
         </section>
     </body>
 </html>
