--- a/assessment/register.html
+++ b/assessment/register.html
@@ -1,6 +1,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="main.css">
+        <section class="navbar">
+            <a id="logo" href="index.html"><img src="images/logo.png"></a></li>
+            <ul id="navlink">
+             <li><a href="about.html">About </a></li>
+             <li><a href="services.html">Services </a></li>
+             <li><a class="active" href="register.html">Register</a></li>
+            </ul>
+        </section>
     </head>
     <body>
     </body>
