--- a/assessment/about.html
+++ b/assessment/about.html
@@ -12,6 +12,10 @@
     </head>
     <body>
         <h1>About us</h1>
+
+        <h1>#1 online tutoring service</h1>
+        <img src="images/wmn_lptp2.png" class="rounded main">
+        <h1>by kiwis, for kiwis</h1>
         <p>Tutortastic was founded in 2022 to help students in all parts of Aotearoa. Our services are built on Maori values and ideas on community, family, kinship, and preservation of knowledge. Our prices are lower than other tutoring platforms because we value education over profits. For Tutortastic, our ākonga come first.
          </br></br>
          <strong>Our Mission</strong></br>
