--- a/assessment/services.html
+++ b/assessment/services.html
@@ -8,10 +8,11 @@
              <li><a class="active" href="services.html">Services </a></li>
              <li><a href="register.html">Register</a></li>
             </ul>
+            <img src="images/glasses.png" id="glasses">
         </section>
     </head>
-    <body>
-        <section id="services">
+    <body id="services">
+        <section id="servicessec">
             <h1>We offer...</h1>
             <table class="subjects">
                 <tr>
@@ -47,7 +48,7 @@
             <h3>Tutortastic</h3>
             <h5>family</h5>
 
-            <a href="" class="button">Sign up</a>
+            <a href="other.html" class="button">Sign up</a>
         </section>
     </body>
 </html>
