--- a/assessment/register.html
+++ b/assessment/register.html
@@ -10,7 +10,40 @@
             </ul>
         </section>
     </head>
-    <body>
+
+    <body id="registerbody">
+        <section>
+            <div>
+                <h1>Join Tutortastic as a tutor!</h1>
+            </div>
+
+            <div id="registermain">
+
+                <div class="register">
+                 <img class="registerimage" src="images/wmn_lptp3.png">
+                </div>
+
+                <div>
+                 <p class="register registertext">We’re looking for individuals that uphold our mission</br>for accessible, friendly education for</br>students of Aotearoa. Tutoring with us can help</br>spread your own skills and knowledge alongside</br>your students.</br>
+                  </br>
+                 We have teachers of all sorts! Not just Science,</br>Maths, English, History, or Tech.</br>
+                 </br>
+                 Share your passion for the arts, dance,</br>language. film, music, and more!</p>
+                </div>
+
+            </div>
+            
+        </section>
+        <section class="benefits">
+            <table>
+                <tr>
+                 <th><img class="benefittable" src="images/share.png"><h4>Share</h4><p></p></th>
+                 <th><img class="benefittable" src="images/social.png"><h4>Social</h4><p></p></th>
+                 <th><img class="benefittable" src="images/soar.png"><h4>Soar</h4><p></p></th>
+                </tr>
+             </table>
+        </section>
+        <p id="emailus">Email us at apply.tutortastic.nz@gmail.com for more information</p>
     </body>
 </html>
 
