--- a/assessment/assessment/register.html
+++ b/assessment/assessment/register.html
@@ -1,5 +1,9 @@
 <html>
     <head>
+        <!-- Navigation bar. This will be on all pages. -->
+        <!-- The title and favicon indicate the website the user is on. -->
+        <title>Tutortastic</title>
+        <link rel="icon" href="images/favicon.png">
         <link rel="stylesheet" href="main.css">
         <section class="navbar">
             <a id="logo" href="index.html"><img src="images/logo.png"></a></li>
@@ -36,15 +40,7 @@
 
             </div>
 
-        </section>
-        <section class="benefits">
-            <table>
-                <tr>
-                 <th><img class="benefittable" src="images/share.png"><h4>Share</h4><p></p></th>
-                 <th><img class="benefittable" src="images/social.png"><h4>Social</h4><p></p></th>
-                 <th><img class="benefittable" src="images/soar.png"><h4>Soar</h4><p></p></th>
-                </tr>
-             </table>
+        </section class="benefits">
         </section>
         <p id="emailus">Email us at apply.tutortastic.nz@gmail.com for more information</p>
     </body>
