--- a/assessment/assessment/services.html
+++ b/assessment/assessment/services.html
@@ -1,5 +1,9 @@
 <html>
     <head>
+        <!-- Navigation bar. This will be on all pages. -->
+        <!-- The title and favicon indicate the website the user is on. -->
+        <title>Tutortastic</title>
+        <link rel="icon" href="images/favicon.png">
         <link rel="stylesheet" href="main.css">
         <section class="navbar">
             <a id="logo" href="index.html"><img src="images/logo.png"></a></li>
@@ -38,7 +42,8 @@
             <p>We offer online tutoring at $40 an hour. we pay our tutors together with your lesson fee, so that we can bring you these lessons for cheaper.</br>
                 Meeting with your chosen tutors beforehand is free, and helps you make the right decision for you.</br>
                 </br>
-                If you cancel a lesson, you need to inform the tutor 24 hours beforehand, otherwise the tutor will need to be reimbursed. Cancellation fees will vary, but wouldn’t cost more than a single lesson’s fee.</br>
+                If you cancel a lesson, you need to inform the tutor 24 hours beforehand, otherwise the tutor will need to be reimbursed. Cancellation fees will vary, but wouldn’t</br>
+                cost more than a single lesson’s fee.</br>
                 </br>
                 We recommend 1-1.5 hours weekly in your chosen subject, but you can negotiate the schedule however you see fit with your tutor.</p>
         </section>
