--- a/assessment/assessment/register.html
+++ b/assessment/assessment/register.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="images/favicon.png">
         <link rel="stylesheet" href="main.css">
         <section class="navbar">
-            <a id="logo" href="index.html"><img src="images/logo.png"></a></li>
+            <a id="logo" href="index.html"><img src="images/logo.png"></a>
             <ul id="navlink">
              <li><a href="about.html">About </a></li>
              <li><a href="services.html">Services </a></li>
@@ -17,15 +17,13 @@
 
     <body id="registerbody">
         <section>
-            <div id="registermain">
-
-                <div class="register">
-                    <img class="registerimage" src="images/wmn_lptp3.png">
-                </div>
-
-                <div class="register">
-                    <h1>Join Tutortastic as a tutor!</h1>
-                    <p class="registertext">We’re looking for individuals that uphold our mission</br>
+            <div class="register">
+                <!-- Main image -->
+                 <img class="registerimage" src="images/wmn_lptp3.png">
+            </div>
+            <div class="register">
+                <h1>Join Tutortastic as a tutor!</h1>
+                <p class="registertext">We’re looking for individuals that uphold our mission</br>
                     for accessible, friendly education for</br>
                     students of Aotearoa. Tutoring with us can help</br>
                     spread your own skills and knowledge alongside</br>
@@ -36,9 +34,8 @@
                     </br>
                     Share your passion for the arts, dance,</br>
                     language. film, music, and more!</p>
-                </div>
-
             </div>
+
 
         </section class="benefits">
         </section>
