--- a/assessment/assessment/services.html
+++ b/assessment/assessment/services.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="images/favicon.png">
         <link rel="stylesheet" href="main.css">
         <section class="navbar">
-            <a id="logo" href="index.html"><img src="images/logo.png"></a></li>
+            <a id="logo" href="index.html"><img src="images/logo.png"></a>
             <ul id="navlink">
              <li><a href="about.html">About </a></li>
              <li><a class="active" href="services.html">Services </a></li>
@@ -16,6 +16,7 @@
         </section>
     </head>
     <body id="services">
+        <!-- Section with subjects offered -->
         <div id="servicessec">
             <h1>We offer...</h1>
             <table class="subjects">
@@ -39,18 +40,24 @@
         </div>
 
         <section id="pricing">
-            <p>We offer online tutoring at $40 an hour. we pay our tutors together with your lesson fee, so that we can bring you these lessons for cheaper.</br>
-                Meeting with your chosen tutors beforehand is free, and helps you make the right decision for you.</br>
+            <p>We offer online tutoring at $40 an hour. we pay our tutors</br>
+                together with your lesson fee, so that we can bring you</br>
+                these lessons for cheaper.</br>
+                Meeting with your chosen tutors beforehand is free, and</br>
+                helps you make the right decision for you.</br>
                 </br>
-                If you cancel a lesson, you need to inform the tutor 24 hours beforehand, otherwise the tutor will need to be reimbursed. Cancellation fees will vary, but wouldn’t</br>
+                If you cancel a lesson, you need to inform the tutor</br>
+                24 hours beforehand, otherwise the tutor will need to be</br>
+                reimbursed. Cancellation fees will vary, but wouldn’t</br>
                 cost more than a single lesson’s fee.</br>
                 </br>
-                We recommend 1-1.5 hours weekly in your chosen subject, but you can negotiate the schedule however you see fit with your tutor.</p>
+                We recommend 1-1.5 hours weekly in your chosen subject,</br>but you can negotiate the schedule however you see</br>
+                fit with your tutor.</p>
         </section>
 
-        <section>
+        <section class="jointhe">
             <h5>Join the</h5>
-            <h3>Tutortastic</h3>
+            <h1 class="tutortasticfam">Tutortastic</h1>
             <h5>family</h5>
 
             <a href="other.html" class="button">Sign up</a>
