--- a/assessment/assessment/about.html
+++ b/assessment/assessment/about.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="images/favicon.png">
         <link rel="stylesheet" href="main.css">
         <section class="navbar">
-            <a id="logo" href="index.html"><img src="images/logo.png"></a></li>
+            <a id="logo" href="index.html"><img src="images/logo.png"></a>
             <ul id="navlink">
              <li><a class="active" href="about.html">About </a></li>
              <li><a href="services.html">Services </a></li>
@@ -16,10 +16,12 @@
     </head>
 
     <body>
+        <!-- Body title -->
         <h1 class="aboutus">About us</h1>
-
+        <!-- The bar that falls behind all the elements-->
         <div class="bar">
             <img src="images/stdntsnew.png" class="barimg">
+            <!-- A summary about Tutortastics values and mission -->
             <div class="aboutpara">
                 <p>Tutortastic was founded in 2022 to help students in all parts of Aotearoa. Our</br>
                 services are built on Maori values and ideas on community, family, kinship, and preservation of</br>
@@ -33,6 +35,7 @@
               </div>
         </div>
 
+        <!-- Main image -->
         <h1><img id="tutoringservice" src="images/onlinetutoring.png" alt="Number 1 tutoring service"></h1>
         <img src="images/wmn_lptp2.png" class="aboutimg rounded main">
         <h1><img id="bykiwis" src="images/bykiwisforkiwis.png" alt="by kiwis, for kiwis"></h1>
