--- a/assessment/register.html
+++ b/assessment/register.html
@@ -1,8 +1,12 @@
 <html>
     <head>
+        <!-- Navigation bar. This will be on all pages. -->
+        <!-- The title and favicon indicate the website the user is on. -->
+        <title>Tutortastic</title>
+        <link rel="icon" href="images/favicon.png">
         <link rel="stylesheet" href="main.css">
         <section class="navbar">
-            <a id="logo" href="index.html"><img src="images/logo.png"></a></li>
+            <a id="logo" href="index.html"><img src="images/logo.png"></a>
             <ul id="navlink">
              <li><a href="about.html">About </a></li>
              <li><a href="services.html">Services </a></li>
@@ -13,35 +17,28 @@
 
     <body id="registerbody">
         <section>
-            <div>
+            <div class="register">
+                <!-- Main image -->
+                 <img class="registerimage" src="images/wmn_lptp3.png"
+                 alt="Image of a student">
+            </div>
+            <div class="register">
                 <h1>Join Tutortastic as a tutor!</h1>
+                <p class="registertext">We’re looking for individuals that uphold our mission</br>
+                    for accessible, friendly education for</br>
+                    students of Aotearoa. Tutoring with us can help</br>
+                    spread your own skills and knowledge alongside</br>
+                    your students.</br>
+                    </br>
+                    We have teachers of all sorts! Not just Science,</br>
+                    Maths, English, History, or Tech.</br>
+                    </br>
+                    Share your passion for the arts, dance,</br>
+                    language. film, music, and more!</p>
             </div>
 
-            <div id="registermain">
 
-                <div class="register">
-                 <img class="registerimage" src="images/wmn_lptp3.png">
-                </div>
-
-                <div>
-                 <p class="register registertext">We’re looking for individuals that uphold our mission</br>for accessible, friendly education for</br>students of Aotearoa. Tutoring with us can help</br>spread your own skills and knowledge alongside</br>your students.</br>
-                  </br>
-                 We have teachers of all sorts! Not just Science,</br>Maths, English, History, or Tech.</br>
-                 </br>
-                 Share your passion for the arts, dance,</br>language. film, music, and more!</p>
-                </div>
-
-            </div>
-            
-        </section>
-        <section class="benefits">
-            <table>
-                <tr>
-                 <th><img class="benefittable" src="images/share.png"><h4>Share</h4><p></p></th>
-                 <th><img class="benefittable" src="images/social.png"><h4>Social</h4><p></p></th>
-                 <th><img class="benefittable" src="images/soar.png"><h4>Soar</h4><p></p></th>
-                </tr>
-             </table>
+        </section class="benefits">
         </section>
         <p id="emailus">Email us at apply.tutortastic.nz@gmail.com for more information</p>
     </body>
