--- a/assessment/index.html
+++ b/assessment/index.html
@@ -29,7 +29,7 @@
             about Tutortastic.-->
             <div class="review-left">
                 <img src="images/stars1.png" class="revimg"
-                alt="Four stars">
+                alt="Four stars" draggable="false">
                 <p class="review">“Tutortastic paired my daughter with the</br>
                     best tutors, she was able to achieve NCEA Level 3</br>
                     with ease!”</br>
